services section done

--- a/index.html
+++ b/index.html
@@ -297,7 +297,8 @@
                         Excellent Support
                     </h5>
                     <p class="mt-3 pe-3 pe-lg-5 fs-5 e-body">
-                        If you face any trouble, you can always <br> let our dedicated support team help <br> you. They are ready for you 24/7.
+                        If you face any trouble, you can always <br> let our dedicated support team help <br> you. They
+                        are ready for you 24/7.
                     </p>
                 </div>
 
@@ -307,7 +308,8 @@
                         Faster Performance
                     </h5>
                     <p class="mt-3 pe-3 pe-lg-5 fs-5 e-body">
-                        We develop a systematic well-ordered <br> process of analysis, from concept <br> through implementation.
+                        We develop a systematic well-ordered <br> process of analysis, from concept <br> through
+                        implementation.
                     </p>
                 </div>
 
@@ -317,6 +319,161 @@
 
     </section>
 
+    <section id="Services">
+
+        <div class="container">
+
+            <div class="text-center mb-5">
+
+                <h2 class="mb-2"> Our service</h2>
+                <div class="line"></div>
+
+            </div>
+
+
+            <div class="row  bg-white align-items-center service-card ">
+
+                <div class="col-md-12 s-border col-lg-6 p-0 rounded-ts-lg rounded-te-lg rounded-lg-te-0 ">
+                    <img src="./assets/images/services.jpg" class="img-fluid" alt="">
+                </div>
+
+                <div
+                    class="col-md-12 col-lg-6 rounded-bs-lg rounded-lg-bs-0 rounded-be-lg rounded-lg-be-0 rounded-lg-te-lg">
+
+                    <div class="service-content p-5">
+
+                        <h2>Business Consulting</h2>
+
+                        <p class="mt-3">
+                            As one of the world’s largest accountancy networks, elixir helps a diverse range of clients
+                            with a diverse range of needs.This is especially true of our Advisory Practice, which
+                            provides corporate finance and transaction services, business restructuring.
+                        </p>
+
+                        <a href="">
+                            Lear More <i class="ri-arrow-right-line"></i>
+                        </a>
+
+                    </div>
+
+                </div>
+
+            </div>
+
+
+            <!-- 2 -->
+
+            <div class="row bg-white  align-items-center">
+
+                <div class="col-md-12 col-lg-6">
+
+                    <div class="service-content px-5 py-6">
+
+                        <h2>Tax consulting</h2>
+
+                        <p>
+                            Elixir serves clients across the country and around the world as they navigate an
+                            increasingly complex tax landscape. Our tax professionals draw on deep experience and
+                            industry-specific knowledge to deliver clients the insights and innovation they need.
+                        </p>
+
+                        <a href="">
+                            read more <i class="ri-arrow-right-line"></i>
+                        </a>
+
+                    </div>
+
+                </div>
+
+                <div class="col-md-12 col-lg-6 p-0">
+                    <img src="./assets/images/services.jpg" class="img-fluid w-100" alt="">
+                </div>
+
+            </div>
+
+            <!-- 3 -->
+
+
+            <div class="row bg-white   align-items-center">
+
+
+                <div class="col-md-12 col-lg-6 p-0">
+                    <img src="./assets/images/services.jpg" class="img-fluid w-100" alt="">
+                </div>
+
+                <div class="col-md-12 col-lg-6">
+
+                    <div class="service-content px-5 py-6">
+
+                        <h2>Advisory</h2>
+
+                        <p>
+                            To help you understand what this road looks like, we surveyed 1165 digital marketers across
+                            Europe and North America to explore current trends and priorities in digital marketing.
+                        </p>
+
+                        <a href="">
+                            read more <i class="ri-arrow-right-line"></i>
+                        </a>
+
+                    </div>
+
+                </div>
+
+
+            </div>
+
+
+            <div class="row mt-7">
+
+                <div class="col-sm-6 col-lg-4 px-4 px-sm-3 mb-4 mb-lg-0">
+
+                    <h5 class="e-primary fs-4">
+                        <i class="ri-bank-card-line"></i>
+                        Special financing
+                    </h5>
+                    <p class="mt-3 pe-3 pe-lg-5 fs-5 e-body">
+                        Apply for special financial support and earn exclusive rewards.
+                    </p>
+
+
+                </div>
+
+                <div class="col-sm-6 col-lg-4 px-4 px-sm-3 mb-4 mb-lg-0">
+
+                    <h5 class="e-primary fs-4">
+                        <i class="ri-chat-4-fill"></i>
+                        Chat with team
+                    </h5>
+                    <p class="mt-3 pe-3 pe-lg-5 fs-5 e-body">
+                        Have a question? Chat online with an expert.
+
+
+                </div>
+
+
+                <div class="col-sm-6 col-lg-4 px-4 px-sm-3 mb-4 mb-lg-0">
+
+                    <h5 class="e-primary fs-4">
+                        <i class="ri-phone-fill"></i>
+                        Call a specialist
+
+                    </h5>
+                    <p class="mt-3 pe-3 pe-lg-5 fs-5 e-body">
+                        Our 24/7 support team is ready for you at 1-800-MY-Elixir.
+
+                    </p>
+
+
+                </div>
+
+            </div>
+
+
+
+        </div>
+
+    </section>
 
 
 
