--- a/index.html
+++ b/index.html
@@ -475,6 +475,114 @@
 
     </section>
 
+    <section id="choose">
+
+        <div class="container">
+
+            <div class="text-center mb-5">
+
+                <h2 class="mb-2">Wyh Choose us</h2>
+                <div class="line"></div>
+
+            </div>
+
+            <div class="row">
+
+                <div class="col-lg-6 pe-lg-3">
+
+                    <img src="./assets/images/why-choose-us.jpg" class="img-fluid rounded-3" alt="">
+
+                </div>
+
+                <div class="col-lg-6 px-lg-5 mt-6 mt-lg-0 choose-us ">
+
+
+
+                    <div class="px-4 px-sm-0 ">
+
+                        <h5 class="e-primary fs-4">
+                            <i class="ri-chat-1-fill"></i>
+                            We Are Professional
+                        </h5>
+                        <p class="">
+                            We resource, train, speak, mentor and encourage; marketplace leaders, business owners and
+                            career professionals to be effective in the workplace.
+                        </p>
+
+
+                    </div>
+
+
+                    <div class="px-4 px-sm-0  ">
+
+                        <h5 class="e-primary fs-4">
+                            <i class="ri-palette-fill"></i>
+                            We Are Creative
+                        </h5>
+                        <p class="">
+                            With so many factors to consider when deciding how to characterize your company , wouldn’t
+                            it be great to have a group of forward-thinking, well-informed individuals on board who know
+                            what they’re doing?
+                        </p>
+
+
+                    </div>
+
+
+                    <div class="px-4 px-sm-0 ">
+
+                        <h5 class="e-primary fs-4">
+                            <i class="ri-timer-fill"></i>
+                            24/7 Great Support
+                        </h5>
+                        <p class="">
+                            Design clever and compelling marketing strategies, improve product positioning, and drive
+                            conversion rates, Elixir is all time available to guide you.
+                        </p>
+
+
+                    </div>
+
+
+
+                </div>
+
+            </div>
+
+
+
+        </div>
+
+    </section>
+
+
+    <section id="contact-us" class="py-6 text-center text-md-start">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-md">
+                    <h4 class="text-white mb-0 fs-2">If you have any query related investment... <br
+                            class="d-md-none">we are available 24/7</h4>
+                </div>
+                <div class="col-md-auto mt-md-0 mt-4"><a class="btn btn-light rounded-pill px-4"
+                        href="contact.html">Contact Us</a></div>
+            </div>
+        </div><!-- end of .container-->
+    </section>
+
+
+    <section id="serves-card">
+
+        <div class="text-center mb-5">
+
+            <h2 class="mb-2">Things You Get</h2>
+            <div class="line"></div>
+
+        </div>
+
+
+
+    </section>
+
 
 
 
