--- a/index.html
+++ b/index.html
@@ -570,26 +570,333 @@
     </section>
 
 
-    <section id="serves-card">
+    <section id="serves-card" class="py-5">
 
-        <div class="text-center mb-5">
+        <div class="container">
 
-            <h2 class="mb-2">Things You Get</h2>
-            <div class="line"></div>
+
+
+            <div class="text-center mb-5">
+
+                <h2 class="mb-2">Things You Get</h2>
+                <div class="line"></div>
+
+            </div>
+
+
+            <div class="row">
+
+                <div class="col-md-6 col-lg-4 text-center mt-4 px-4">
+
+                    <div class=" mx-auto">
+
+                        <i class="ri-earth-line fs-2"></i>
+
+                    </div>
+
+                    <h5 class="mt-1 text-center">
+                        Creative Support
+                    </h5>
+                    <p class="mb-0 mt-2 px-3">
+
+                        We transform brands, grow businesses, and tell brand and product stories in a most creative way.
+
+                    </p>
+
+                </div>
+                <!-- 2 -->
+                <div class="col-md-6 col-lg-4 text-center mt-4 px-4">
+
+                    <div class=" mx-auto">
+
+                        <i class="ri-mail-line fs-2"></i>
+
+                    </div>
+
+                    <h5 class="mt-1 text-center">
+                        Creating Experiences
+                    </h5>
+                    <p class="mb-0 mt-2 px-3">
+
+                        We cover a large range of creative platforms and digital projects with one purpose: to create
+                        experiences.
+
+                    </p>
+
+                </div>
+
+                <div class="col-md-6 col-lg-4 text-center mt-4 px-4">
+
+                    <div class=" mx-auto">
+
+                        <i class="ri-focus-2-line fs-2"></i>
+
+                    </div>
+
+                    <h5 class="mt-1 text-center">
+                        Product Consulting
+                    </h5>
+                    <p class="mb-0 mt-2 px-3">
+
+                        We guide you through the pipelines that generate new products with higher potential and lower
+                        risk.
+
+                    </p>
+
+                </div>
+
+
+                <div class="col-md-6 col-lg-4 text-center mt-4 px-4">
+
+                    <div class=" mx-auto">
+
+                        <i class="ri-global-fill fs-2"></i>
+
+                    </div>
+
+                    <h5 class="mt-1 text-center">
+                        Business Boosting
+                    </h5>
+                    <p class="mb-0 mt-2 px-3">
+
+                        We provide energy-efficient and environmentally conservative solutions to our clients to boost
+                        their business.
+
+                    </p>
+
+                </div>
+
+                <div class="col-md-6 col-lg-4 text-center mt-4 px-4">
+
+                    <div class=" mx-auto">
+
+                        <i class="ri-donut-chart-fill fs-2"></i>
+
+                    </div>
+
+                    <h5 class="mt-1 text-center">
+                        Strategic Approach
+                    </h5>
+                    <p class="mb-0 mt-2 px-3">
+
+                        Based on solid strategic framework and real, relevant research, we create prototypes, not
+                        presentations.
+
+                    </p>
+
+                </div>
+
+                <div class="col-md-6 col-lg-4 text-center mt-4 px-4">
+
+                    <div class=" mx-auto">
+
+                        <i class="ri-line-chart-fill fs-2"></i>
+
+                    </div>
+
+                    <h5 class="mt-1 text-center">
+                        Logistic Consulting
+
+                    </h5>
+                    <p class="mb-0 mt-2 px-3">
+
+                        We work buy side and sell side to give our clienrts hard hitting answers and focus hard on best
+                        opportunities.
+
+                    </p>
+
+                </div>
+
+            </div>
 
         </div>
-
-        
-
 
 
     </section>
 
 
 
+    <!-- form -->
+
+    <section id="form" style="background-color: #2a3855; padding: 100px 0;">
+        <div class="container">
+
+            <div class="row align-items-center text-white gy-4">
+
+                <div class="col-lg-4">
+                    <div class="border border-2 border-warning p-4 py-lg-5 text-center rounded-3">
+                        <div class="overflow-hidden">
+                            <h4 class="text-white" style="transform: translate(0px, 0px); opacity: 1;">Request a call
+                                back</h4>
+                        </div>
+                        <div class="overflow-hidden">
+                            <p class="px-lg-1 text-100 mb-0" style="transform: translate(0px, 0px); opacity: 1;">Would
+                                you like to speak to one of our financial advisers over the phone? Just submit your
+                                details and we’ll be in touch shortly. You can also email us if you would prefer.</p>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="col-lg-8 ps-lg-5 mt-6 mt-lg-0">
+
+                    <h5 class="text-white">I would like to discuss:</h5>
+                    <form class="mt-4" method="post">
+                        <div class="row">
+                            <div class="col-6"><input class="form-control" type="hidden" name="to"
+                                    value="username@domain.extension"><input class="form-control" type="text"
+                                    placeholder="Your Name" aria-label="Your Name"></div>
+                            <div class="col-6"><input class="form-control" type="text" placeholder="Phone Number"
+                                    aria-label="Phone Number"></div>
+                            <div class="col-6 mt-4"><input class="form-control" type="text" placeholder="Subject"
+                                    aria-label="Subject"></div>
+                            <div class="col-6 mt-4"><button class="btn btn-warning w-100" type="submit">Submit</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!--  -->
+
+    <section id="leadership" style="padding: 100px 0;">
+
+        <div class="container">
+
+
+            <div class="text-center mb-5">
+
+                <h2 class="mb-3">Global leadership</h2>
+                <div class="line"></div>
+
+            </div>
+
+            <div class="row gy-4">
+
+                <div class="col-sm-6 col-lg-4">
+                    <div class="card border-0">
+                        <img src="./assets/images/portrait-3.jpg" class="card-img-top" alt="...">
+                        <div class="card-body text-center p-4">
+                            <div>
+                                <h5 class="card-title fs-4 e-primary fw-bold">Reenal Scott</h5>
+                                <p class="fs-6 e-body">Advertising Consultant</p>
+                            </div>
+                            <div>
+                                <p class="card-text e-body">Reenal Scott is the Founder and CEO of Elixir, which he
+                                    started from his dorm room in 2013 with 3 people only.</p>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
 
 
 
+                <div class="col-sm-6 col-lg-4">
+                    <div class="card border-0">
+                        <img src="./assets/images/portrait-4.jpg" class="card-img-top" alt="...">
+                        <div class="card-body text-center p-4">
+                            <div>
+                                <h5 class="card-title fs-4 e-primary fw-bold">Reenal Scott</h5>
+                                <p class="fs-6 e-body">Advertising Consultant</p>
+                            </div>
+                            <div>
+                                <p class="card-text e-body">Reenal Scott is the Founder and CEO of Elixir, which he
+                                    started from his dorm room in 2013 with 3 people only.</p>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+
+
+
+                <div class="col-sm-6 col-lg-4">
+                    <div class="card border-0">
+                        <img src="./assets/images/portrait-5.jpg" class="card-img-top" alt="...">
+                        <div class="card-body text-center p-4">
+                            <div>
+                                <h5 class="card-title fs-4 e-primary fw-bold">Reenal Scott</h5>
+                                <p class="fs-6 e-body">Advertising Consultant</p>
+                            </div>
+                            <div>
+                                <p class="card-text e-body">Reenal Scott is the Founder and CEO of Elixir, which he
+                                    started from his dorm room in 2013 with 3 people only.</p>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+
+
+
+                <div class="col-sm-6 col-lg-4">
+                    <div class="card border-0">
+                        <img src="./assets/images/portrait-6.jpg" class="card-img-top" alt="...">
+                        <div class="card-body text-center p-4">
+                            <div>
+                                <h5 class="card-title fs-4 e-primary fw-bold">Reenal Scott</h5>
+                                <p class="fs-6 e-body">Advertising Consultant</p>
+                            </div>
+                            <div>
+                                <p class="card-text e-body">Reenal Scott is the Founder and CEO of Elixir, which he
+                                    started from his dorm room in 2013 with 3 people only.</p>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+
+
+
+                <div class="col-sm-6 col-lg-4">
+                    <div class="card border-0">
+                        <img src="./assets/images/portrait-5.jpg" class="card-img-top" alt="...">
+                        <div class="card-body text-center p-4">
+                            <div>
+                                <h5 class="card-title fs-4 e-primary fw-bold">Reenal Scott</h5>
+                                <p class="fs-6 e-body">Advertising Consultant</p>
+                            </div>
+                            <div>
+                                <p class="card-text e-body">Reenal Scott is the Founder and CEO of Elixir, which he
+                                    started from his dorm room in 2013 with 3 people only.</p>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+
+
+
+                <div class="col-sm-6 col-lg-4">
+                    <div class="card border-0">
+                        <img src="./assets/images/portrait-3.jpg" class="card-img-top" alt="...">
+                        <div class="card-body text-center p-4">
+                            <div>
+                                <h5 class="card-title fs-4 e-primary fw-bold">Reenal Scott</h5>
+                                <p class="fs-6 e-body">Advertising Consultant</p>
+                            </div>
+                            <div>
+                                <p class="card-text e-body">Reenal Scott is the Founder and CEO of Elixir, which he
+                                    started from his dorm room in 2013 with 3 people only.</p>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+
+    </section>
+
+
+
+
+    <!-- counter -->
 
 
 
