--- a/index.html
+++ b/index.html
@@ -896,10 +896,68 @@
 
 
 
-    <!-- counter -->
+    <section id="counter">
+
+        <div class="container">
+
+            <div class="d-flex">
+
+                <div>
+                    <i class="ri-checkbox-circle-line"></i>
+                </div>
+
+                <div class="flex-grow-1">
+                    <h2>Take the right step <br>
+                        do the big things.</h2>
+
+                    <div class="row gy-5">
+
+                        <div class="col-md-6 col-lg-2 ">
+
+                            <div>
+                                <h3 class="fs-1 fw-bolder">235</h3>
+                                <p>clients</p>
+                            </div>
+
+                        </div>
+
+                        <div class="col-md-6 col-lg-2">
+
+                            <div>
+                                <h3 class="fs-1 fw-bolder">235</h3>
+                                <p>Projects</p>
+                            </div>
+
+                        </div>
+
+                        <div class="col-md-6 col-lg-2">
+
+                            <div>
+                                <h3 class="fs-1 fw-bolder mb-0">235</h3>
+                                <p>Hour of support</p>
+                            </div>
+
+                        </div>
+
+                        <div class="col-md-6 col-lg-2">
+
+                            <div>
+                                <h3 class="fs-1 fw-bolder">235</h3>
+                                <p>workers</p>
+                            </div>
+
+                        </div>
+
+                    </div>
+                </div>
+
+            </div>
 
 
 
+        </div>
+
+    </section>
 
 
 
