--- a/index.html
+++ b/index.html
@@ -933,7 +933,7 @@
                         <div class="col-md-6 col-lg-2">
 
                             <div>
-                                <h3 class="fs-1 fw-bolder mb-0">235</h3>
+                                <h3 class="fs-1 fw-bolder mb">235</h3>
                                 <p>Hour of support</p>
                             </div>
 
