--- a/index.html
+++ b/index.html
@@ -896,19 +896,20 @@
 
 
 
-    <section id="counter">
+    <section id="counter" class="bg-black mb-5">
 
         <div class="container">
 
-            <div class="d-flex">
+            <div class="d-flex counter-hero">
 
                 <div>
                     <i class="ri-checkbox-circle-line"></i>
                 </div>
 
-                <div class="flex-grow-1">
-                    <h2>Take the right step <br>
-                        do the big things.</h2>
+                <div class="flex-grow-1 flex-nowrap ">
+                    <h2 class="mb-5">Take the right step <br>
+                        <span style="color: white ;">do the big things.</span>
+                    </h2>
 
                     <div class="row gy-5">
 
@@ -950,6 +951,100 @@
 
                     </div>
                 </div>
+
+            </div>
+
+
+
+        </div>
+
+    </section>
+
+    <section id="news">
+
+        <div class="container">
+
+
+            <div class="text-center mb-5">
+
+                <h2 class="mb-3">Global leadership</h2>
+                <div class="line"></div>
+
+            </div>
+
+            <div class="row gy-4">
+
+                <div class="col-sm-6 col-lg-4">
+                    <div class="card border-0">
+                        <img src="./assets/images/9.jpg" class="card-img-top" alt="...">
+                        <div class="card-body  p-4">
+                            <div>
+                                <h5 class="card-title fs-4 e-primary fw-bold">Tax impacts of lease mean accounting
+                                    change</h5>
+                                <p class="fs-6 e-body">By Paul O'Sullivan</p>
+                            </div>
+                            <div>
+                                <p class="card-text e-body">HMRC released a consultation document to flag some potential
+                                    tax impacts that a forthcoming change...</p>
+
+
+                            </div>
+                            <a href="">
+                                read more <i class="ri-arrow-right-line"></i>
+                            </a>
+
+                        </div>
+                    </div>
+                </div>
+
+
+
+                <div class="col-sm-6 col-lg-4">
+                    <div class="card border-0">
+                        <img src="./assets/images/10.jpg" class="card-img-top" alt="...">
+                        <div class="card-body  p-4">
+                            <div>
+                                <h5 class="card-title fs-4 e-primary fw-bold">What brexit means for data protection law
+                                </h5>
+                                <p class="fs-6 e-body">By Enrico Ambrosi</p>
+                            </div>
+                            <div>
+                                <p class="card-text e-body">Assuming that the referendum is not ignored completely,
+                                    there are two possible futures for the UK...</p>
+                            </div>
+
+                            <a href="">
+                                read more <i class="ri-arrow-right-line"></i>
+                            </a>
+
+                        </div>
+                    </div>
+                </div>
+
+
+
+                <div class="col-sm-6 col-lg-4">
+                    <div class="card border-0">
+                        <img src="./assets/images/9.jpg" class="card-img-top" alt="...">
+                        <div class="card-body p-4">
+                            <div>
+                                <h5 class="card-title fs-4 e-primary fw-bold">The growing meanace of social engineering
+                                    fraud</h5>
+                                <p class="fs-6 e-body">By Robson</p>
+                            </div>
+                            <div>
+                                <p class="card-text e-body">Social engineering involves the collection of information
+                                    from various sources about a target...</p>
+                            </div>
+                            <a href="">
+                                read more <i class="ri-arrow-right-line"></i>
+                            </a>
+
+                        </div>
+                    </div>
+                </div>
+
+
 
             </div>
 
