--- a/index.html
+++ b/index.html
@@ -960,6 +960,40 @@
 
     </section>
 
+    <section id="testinomial" style="padding: 120px 0;">
+        <div class="container " style="padding-left: 7.5rem; padding-right: 7.5rem;">
+
+            <div class="row px-lg-8">
+                <div class="col-4 col-md-3 mx-auto"><img class="rounded-3 mx-auto img-fluid"
+                        src="./assets/images/client2.png" alt="Member"></div>
+                <div class="col-md-9 mt-4 mt-md-0 px-4 px-sm-3">
+                    <p class="lead">Their work on our website and Internet marketing has made a significant different to
+                        our
+                        business. We’ve seen a 425% increase in quote requests from the website which has been pretty
+                        remarkable – but I’d always like to see more!</p>
+                    <h6 class="fs-0 mb-1 mt-4 e-primary fw-bold">Michael Clarke</h6>
+                    <p class="mb-0 text-500 e-body">CEO, A.E.T Institute</p>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+    <section class=" py-6 clients-logo">
+
+        <div class="container" >
+          <div class="row align-items-center" data-zanim-timeline="{}">
+            <div class="col-4 col-md-2 my-3 overflow-hidden"><img class="img-fluid" src="assets/images/logo2.png" alt="partnerco" data-zanim-xs="{}" style="transform: translate(0px, 0px); opacity: 1;"></div>
+            <div class="col-4 col-md-2 my-3 overflow-hidden"><img class="img-fluid" src="assets/images/logo1.png" alt="tvc" data-zanim-xs="{}" style="transform: translate(0px, 0px); opacity: 1;"></div>
+            <div class="col-4 col-md-2 my-3 overflow-hidden"><img class="img-fluid" src="assets/images/logo6.png" alt="arcade" data-zanim-xs="{}" style="transform: translate(0px, 0px); opacity: 1;"></div>
+            <div class="col-4 col-md-2 my-3 overflow-hidden"><img class="img-fluid" src="assets/images/logo3.png" alt="bearbrand" data-zanim-xs="{}" style="transform: translate(0px, 0px); opacity: 1;"></div>
+            <div class="col-4 col-md-2 my-3 overflow-hidden"><img class="img-fluid" src="assets/images/logo5.png" alt="fast brothers" data-zanim-xs="{}" style="transform: translate(0px, 0px); opacity: 1;"></div>
+            <div class="col-4 col-md-2 my-3 overflow-hidden"><img class="img-fluid" src="assets/images/logo4.png" alt="harculis beards" data-zanim-xs="{}" style="transform: translate(0px, 0px); opacity: 1;"></div>
+          </div>
+        </div>
+
+    </section>
+
     <section id="news">
 
         <div class="container">
@@ -1053,6 +1087,8 @@
         </div>
 
     </section>
+
+
 
 
 
