--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     </section>
 
 
-    <section id="Header" class="bg-holder">
+    <section id="Header" class="">
 
         <div class="container">
 
@@ -270,7 +270,7 @@
 
                 <div class="col-12">
 
-                    <div class="rounded-4 bg-holder about-video">
+                    <div class="rounded-4  about-video">
                         <!-- <img src="./assets/images/video-screenshot-2.jpg" class="img-fluid border-4 " alt=""> -->
                     </div>
 
@@ -287,7 +287,7 @@
                     </h5>
                     <p class="mt-3 pe-3 pe-lg-5 fs-5 e-body">
                         Before talking destination, we shine a
-                        spotlight across your organization <br> to fully understand it.
+                        spotlight across your organization to fully understand it.
                     </p>
                 </div>
 
@@ -297,7 +297,7 @@
                         Excellent Support
                     </h5>
                     <p class="mt-3 pe-3 pe-lg-5 fs-5 e-body">
-                        If you face any trouble, you can always <br> let our dedicated support team help <br> you. They
+                        If you face any trouble, you can always  let our dedicated support team help. They
                         are ready for you 24/7.
                     </p>
                 </div>
@@ -308,7 +308,7 @@
                         Faster Performance
                     </h5>
                     <p class="mt-3 pe-3 pe-lg-5 fs-5 e-body">
-                        We develop a systematic well-ordered <br> process of analysis, from concept <br> through
+                        We develop a systematic  well-ordered  process of analysis, from concept  through
                         implementation.
                     </p>
                 </div>
@@ -983,7 +983,7 @@
         </div>
     </section>
 
-    <section class=" py-6 clients-logo">
+    <section class=" clients-logo">
 
         <div class="container">
             <div class="row align-items-center" data-zanim-timeline="{}">
