--- a/pages/registration.html
+++ b/pages/registration.html
@@ -37,7 +37,7 @@
                       <div class="col-6 mt-3">
                         <div class="form-check"><input class="form-check-input" id="rememberMe" type="checkbox" value=""><label class="form-check-label text-500 lh-sm fw-semi-bold" for="rememberMe">I agree with the terms &amp; conditions</label></div>
                       </div>
-                      <div class="col-6 mt-2 mt-sm-3"><button class="text-white e-bg-primary w-100" type="submit">Create Account</button></div>
+                      <div class="col-6 mt-2 mt-sm-3"><button class="text-white btn e-bg-primary w-100" type="submit">Create Account</button></div>
                     </div>
                   </form>
                 </div>
