--- a/pages/services.html
+++ b/pages/services.html
@@ -102,19 +102,19 @@
 
 
 
-    <section id="counter" class=" mb-5">
+    <section id="" class=" serves-page mb-5">
 
         <div class="container">
 
-            <div class="row pt-6" data-inertia="{&quot;weight&quot;:1.5}" style="transform: translate(0px, -6.0544px);">
+            <div class="row pt-6" style="transform: translate(0px, -6.0544px);">
                 <div class="col-md-8 text-white" data-zanim-timeline="{}">
                     <div class="overflow-hidden">
-                        <h1 class="text-white fs-4 fs-md-5 mb-0 lh-1" data-zanim-xs="{&quot;delay&quot;:0}"
+                        <h1 class=" fs-1 fs-md-5 mb-0 lh-1 e-primary" data-zanim-xs="{&quot;delay&quot;:0}"
                             style="transform: translate(0px, 0px); opacity: 1;">Services</h1>
                         <div class="nav" aria-label="breadcrumb" role="navigation"
                             data-zanim-xs="{&quot;delay&quot;:0.1}" style="transform: translate(0px, 0px); opacity: 1;">
-                            <ol class="breadcrumb fs-1 ps-0 fw-bold">
-                                <li class="breadcrumb-item"><a class="text-white" href="#!">Home</a></li>
+                            <ol class="breadcrumb fs-4 e-primary ps-0 fw-bold">
+                                <li class="breadcrumb-item "><a href="#!">Home</a></li>
                                 <li class="breadcrumb-item active" aria-current="page">Services</li>
                             </ol>
                         </div>
